# mmtk-jikesrvm

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  DO_NOT_MERGE.md  README.md  build.xml
.github/scripts/: ci-build.sh  ci-checkout.sh  ci-setup.sh  ci-style.sh  ci-test-assertions-use-bind-ref-proc.sh  ci-test-assertions.sh  ci-test-normal-use-bind-ref-proc.sh  ci-test-normal.sh  ci-test-weak-ref-use-bind-ref-proc.sh  ci-test-weak-ref.sh  ci-test.sh  common.sh
.github/workflows/: ci-assert.yml  ci.yml  tests.yml
jikesrvm/: vm-revision
jikesrvm/rvm/src/org/jikesrvm/: VMExt.java
jikesrvm/rvm/src/org/jikesrvm/mm/mminterface/: CollectorThread.java  ImmixContext.java  ImmixHeaderMarkBitsContext.java  MMTkAllocator.java  MMTkMutatorContext.java  MSContext.java  NoGCContext.java  RustScanThread.java  RustScanning.java  SSContext.java
jikesrvm/rvm/src/org/jikesrvm/runtime/: Entrypoints.java
jikesrvm/tools/rustjtoc/org/jikesrvm/runtime/: RustJTOC.java
mmtk/: Cargo.toml
mmtk-binding/: Cargo.toml
mmtk/api/: mmtk.h
mmtk/src/: active_plan.rs  api.rs  boot_image_size.rs  class_loader_constants.rs  collection.rs  glue.asm  heap_layout_constants.rs  java_header.rs  java_header_constants.rs  java_size_constants.rs  jtoc_call.rs  jtoc_calls.rs  lib.rs  memory_manager_constants.rs  misc_header_constants.rs  object_model.rs  reference_glue.rs  scan_boot_image.rs  scan_sanity.rs  scan_statics.rs  scanning.rs  tib_layout_constants.rs  unboxed_size_constants.rs
mmtk/src/jikesrvm_calls/: helpers.rs  mod.rs
mmtk/src/vm_metadata/: constants.rs  global.rs
