[package]
name = "mmtk_jikesrvm"
version = "0.24.0"
authors = [" <>"]
rust-version = "1.71.1"

[lib]
name = "mmtk_jikesrvm"
# be careful - LTO is only allowed for certain crate types
crate-type = ["cdylib"]

[profile.release]
lto = true

# Metadata for the JikesRVM repository
[package.metadata.jikesrvm]
# Our CI matches the following line and extract mmtk/jikesrvm. If this line is updated, please check ci yaml files and make sure it works.
jikesrvm_repo = "https://github.com/mmtk/jikesrvm.git"
jikesrvm_version = "a43efe4f33a6a69aabeb03e5c5e2e8880f96f047"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
log = {version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch/rev
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI.
mmtk = { git = "https://github.com/mmtk/mmtk-core.git", rev = "5ab62f96c006475285b00b6d20a8b1bf83b74a4d" }
# Uncomment the following to build locally - if you change the path locally, do not commit the change in a PR
# mmtk = { path = "../repos/mmtk-core" }

[features]
default = ["mmtk/vm_space", "mmtk/code_space"]
mmtk_extreme_assertions = ["mmtk/extreme_assertions"]
nogc = []
semispace = []
marksweep = []
malloc_marksweep = ["mmtk/malloc_mark_sweep"]
